# dynamic_ui

./: CLAUDE.md  README.md  meson.build
.claude/: settings.json
.claude/commands/: build.md  check-device.md  clean.md  deploy.md  hash-password.md  run.md  setup.md
assets/: app.css  meson.build
config/: app.json  layout.json  meson.build
docs/: app_architecture.drawio
src/: main.c
src/app/: controller.c  controller.h  state.c  state.h
src/common/: color.c  color.h  contants.h  time_setter.c  time_setter.h  types.h
src/config/: layout_store.c  layout_store.h  loader.c  loader.h
src/input/: auth_manager.c  auth_manager.h  hotkey_manager.c  hotkey_manager.h
src/mode/: manager.c  manager.h
src/net/: ip_setter.c  ip_setter.h  ws_server.c  ws_server.h
src/uart/: data_dispatcher.c  data_dispatcher.h  parser.c  parser.h  port.c  port.h
src/ui/: canvas.c  canvas.h  clock_widget.c  clock_widget.h  editor_mode.c  editor_mode.h  editor_toolbar.c  editor_toolbar.h  marquee.c  marquee.h  overlay.c  overlay.h  read_mode.c  read_mode.h  resize_handle.c  resize_handle.h  value_item.c  value_item.h  window.c  window.h
