configure_file(
  input: 'background.png',
  output: 'background.png',
  copy: true,
)

configure_file(
  input: 'background.gif',
  output: 'background.gif',
  copy: true,
)

configure_file(
  input: 'background3.gif',
  output: 'background3.gif',
  copy: true,
)

configure_file(
  input: 'sacombank.jpg',
  output: 'sacombank.jpg',
  copy: true,
)

configure_file(
  input: 'app.css',
  output: 'app.css',
  copy: true,
)
